--- a/client/eMotion/project.properties
+++ b/client/eMotion/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../JakeWharton-ActionBarSherlock-5a15d92/actionbarsherlock
+android.library.reference.1=../actionbarsherlock
 android.library=false
 android.library.reference.2=../HoloColorPicker-master
