--- a/client/eMotion/AndroidManifest.xml
+++ b/client/eMotion/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Emotionlight" >
+        android:theme="@style/Theme.Emotionlight" 
+        android:name="com.godino.emotion.ApplicationController">
         <activity
             android:name="com.godino.emotion.MainActivity"
             android:label="@string/app_name" >
@@ -35,6 +36,7 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.Emotionlight" >
         </activity>
+        <activity android:name="LoginActivity" android:theme="@style/Theme.Sherlock.NoActionBar"></activity>
     </application>
 
 </manifest>
