--- a/client/eMotion/project.properties
+++ b/client/eMotion/project.properties
@@ -15,3 +15,4 @@ target=android-19
 android.library.reference.1=../actionbarsherlock
 android.library=false
 android.library.reference.2=../HoloColorPicker-master
+android.library.reference.3=../volley
